# django-haystackbrowser

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  demo_project.py  release.sh  setup.cfg  setup.py  tests_search_sites.py  tests_settings.py  tests_urls.py  tox.ini
docs/: Makefile  about.rst  api.rst  changelog.rst  conf.py  index.rst
docs/required_modules/: search_sites.py
haystackbrowser/: __init__.py  admin.py  forms.py  models.py  test_admin.py  test_app.py  test_config.py  test_forms.py  tests_compat.py  utils.py
haystackbrowser/templates/admin/haystackbrowser/: change_form_with_data.html  change_form_with_link.html  result.html  result_list.html  result_list_headers.html  results.html  view.html  view_data.html
haystackbrowser/templatetags/: haystackbrowser_compat.py  haystackbrowser_data.py
