[pytest]
norecursedirs=.* *.egg .svn _build src bin lib local include
python_files=test_*.py
addopts = --cov haystackbrowser --cov-report term --cov-report html -vvv

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[flake8]
max-line-length = 80

[check-manifest]
ignore-default-rules = true
ignore =
    .travis.yml
    .bumpversion.cfg
    PKG-INFO
    .eggs
    .idea
    .tox
    __pycache__
    bin
    include
    lib
    local
    share
    .Python
    *.egg-info
    *.egg-info/*
    setup.cfg
    .hgtags
    .hgignore
    .gitignore
    .bzrignore
    *.mo
